Removed .menu-visible and .editor-visible from ng-class ($digest cycle). Simplified usage of menu and editor visibility classes.

--- a/frontend/core/src/main/webapp/static/app/main/main.html
+++ b/frontend/core/src/main/webapp/static/app/main/main.html
@@ -1,4 +1,4 @@
-<div class="container-main" ng-controller="MainController" ng-class="[isEditorVisible() ? 'editor-visible' : 'editor-hidden', isMenuVisible() ? 'menu-visible' : 'menu-hidden']">
+<div class="container-main" ng-controller="MainController">
   <div ng-include="urlBase + 'app/main/menu.html'" include-replace></div>
   <div ng-include="urlBase + 'app/main/editor.html'" include-replace></div>
   <div drawer-aisle class="container-drawer-aisle">
