--- a/frontend/core/src/main/webapp/static/app/tasks/taskEditor.html
+++ b/frontend/core/src/main/webapp/static/app/tasks/taskEditor.html
@@ -51,7 +51,7 @@
               list-picker-archived-lists="archivedLists"
               list-picker-save="closeListPickerAndSetListToItem(task, list)"
               list-picker-clear="closeListPickerAndClearListFromItem(task, list)"
-              list-picker-selected="task.trans.list"></div>
+              list-picker-get-selected="task.trans.list"></div>
           </div>
 
           <div ng-if="!listPickerOpen">
@@ -124,7 +124,7 @@
             <div list-picker="contexts" list-picker-new-item="getNewContext()"
               list-picker-save="closeContextPickerAndSetContextToTask(task, list)"
               list-picker-clear="closeContextPickerAndClearContextFromTask(task, list)"
-              list-picker-selected="task.trans.context" list-picker-type="context"
+              list-picker-get-selected="task.trans.context" list-picker-type="context"
               list-picker-prefix="@"></div>
           </div>
 
