Fixed lists tutorial copy

--- a/frontend/core/src/main/webapp/static/app/lists/listsActive.html
+++ b/frontend/core/src/main/webapp/static/app/lists/listsActive.html
@@ -18,8 +18,9 @@
       <h2 class="group-heading instruction row">use
         <span class="highlighted">lists</span> to group tasks and notes
       </h2>
-      <div class="textgroup-ingress row">add a <span class="text-highlighted">project</span> or
-      <span class="text-highlighted">responsibility</span> by hitting the plus sign</div>
+      <div class="textgroup-ingress row">add a list &ndash; i.e.
+      <span class="text-highlighted">project</span> or
+      <span class="text-highlighted">responsibility</span> &ndash; by hitting the plus sign</div>
     </div>
     <div ng-if="!isOnboarded('lists') && checkListOnboardingLock('lists', 'off')" class="group-instruction">
       <h2 class="group-heading instruction row">
