Fixed lists and contexts new task/note adding and filtering

--- a/frontend/core/src/main/webapp/static/app/lists/listTasks.html
+++ b/frontend/core/src/main/webapp/static/app/lists/listTasks.html
@@ -1,6 +1,6 @@
 <div class="container-content--outer" ng-if="isFeatureActive('list')" list-container drawer-handle="left">
   <section class="container-content"
-    list="allTasks | itemsFilter:{name:'byListUUID', filterBy: list.trans.uuid}" swiper-prevent>
+    list="allTasks | itemsFilter:{name:'byList', filterBy: list}" swiper-prevent>
     <div class="group-mixed heading">
       <div class="group-mixed--middle">
         <h2 class="group-heading justified">
@@ -9,7 +9,7 @@
       </div>
       <div class="group-mixed--right" task-list-completed></div>
     </div>
-    <div list-item-add="getNewTask({list: list.trans.uuid})"
+    <div list-item-add="getNewTask({list: list})"
       list-item-add-save="saveTask(newItem)" ng-include="urlBase + 'app/tasks/taskListItemAdd.html'"></div>
     <div class="animate-list-item-leave"
       ng-repeat="task in listInfos.array = (getFullArray() | paramFilter:isListItemVisible)
