--- a/frontend/core/src/main/webapp/static/app/tasks/tasksContext.html
+++ b/frontend/core/src/main/webapp/static/app/tasks/tasksContext.html
@@ -1,6 +1,6 @@
 <div class="container-content--outer" ng-if="isFeatureActive('tasks')" list-container>
   <section class="container-content"
-    list="tasks | itemsFilter:{name:'byTagUUID', filterBy: context ? context.trans.uuid : undefined}" swiper-prevent>
+    list="tasks | itemsFilter:{name:'byContext', filterBy: context}" swiper-prevent>
     <div class="group-mixed heading vertically-centered">
       <div class="group-mixed--middle">
         <h2 class="group-heading justified">
