--- a/frontend/core/src/main/webapp/static/app/base/modal.html
+++ b/frontend/core/src/main/webapp/static/app/base/modal.html
@@ -1,13 +1,28 @@
+<div class=" container-fluid--inner">
 <section class="container-content">
-  <header class="group-symmetrical">
-    <a href ng-hide="hideCloseText" class="group-symmetrical--right link-navigation" ng-click="closeModal()">
-      <span class="text-navigation" ng-bind="closeText"></span>
+
+  <header class="group-symmetrical" style="height: 30px; line-height: 30px;">
+    <a href ng-if="!hideCloseText && !closeText" style="padding-right: 14px;" class="group-symmetrical--right icon-downplayed" ng-click="closeModal()">
+      <span ng-if="!closeText" style="margin-top: 7px;" class="icon-x"></span>
+    </a>
+
+    <a href ng-if="!hideCloseText && closeText" style="padding-right: 14px;" class="group-symmetrical--right link-navigation" ng-click="closeModal()">
+      <span ng-if="closeText" class="text-navigation" ng-bind="closeText"></span>
     </a>
   </header>
+
   <div class="group-instruction">
     <!-- TODO: note style or something similar here -->
-    <h2 class="group-heading row" ng-bind="modalInfos.messageHeading"></h2>
-    <div class="textgroup-ingress last row" ng-bind="messageText"></div>
+    <h2 class="group-heading row" ng-style="messageHeading.length > 6 && {fontSize: '40px'};" style="padding-top: 0; padding-bottom: 0;">
+      <span class="text-heading" ng-bind="messageHeading"></span>
+    </h2>
+    <div class="as">
+    <div style="padding-top: 22px; padding-bottom: 22px;" class="textgroup-ingress row" ng-bind="messageIngress"></div>
+
+    <div class="row">
+      <pre style="margin-top: 0; margin-bottom: 0; font-size: 13px; line-height: normal; overflow-x: auto;" ng-bind="messageText"></pre>
+    </div>
+    </div>
     <!-- TODO: note style or something similar here -->
   </div>
 </section>
@@ -17,3 +32,4 @@
     <span class="text-btn" ng-bind="confirmText"></span>
   </button>
 </footer>
+</div>
