--- a/frontend/core/src/main/webapp/static/app/base/modal.html
+++ b/frontend/core/src/main/webapp/static/app/base/modal.html
@@ -1,35 +1,42 @@
-<div class=" container-fluid--inner">
-<section class="container-content">
+<div class="container-fluid">
 
-  <header class="group-symmetrical" style="height: 30px; line-height: 30px;">
-    <a href ng-if="!hideCloseText && !closeText" style="padding-right: 14px;" class="group-symmetrical--right icon-downplayed" ng-click="closeModal()">
-      <span ng-if="!closeText" style="margin-top: 7px;" class="icon-x"></span>
+  <!-- TOOLBAR -->
+  <header class="modal-toolbar group-symmetrical">
+    <a href ng-if="!hideCloseText && !closeText" class="group-symmetrical--right icon-downplayed"
+      ng-click="closeModal()">
+      <span class="icon-x"></span>
     </a>
 
-    <a href ng-if="!hideCloseText && closeText" style="padding-right: 14px;" class="group-symmetrical--right link-navigation" ng-click="closeModal()">
-      <span ng-if="closeText" class="text-navigation" ng-bind="closeText"></span>
+    <a href ng-if="!hideCloseText && closeText" class="group-symmetrical--right link-navigation"
+      ng-click="closeModal()">
+      <span class="text-navigation" ng-bind="closeText"></span>
     </a>
   </header>
 
-  <div class="group-instruction">
-    <!-- TODO: note style or something similar here -->
-    <h2 class="group-heading row" ng-style="messageHeading.length > 6 && {fontSize: '40px'};" style="padding-top: 0; padding-bottom: 0;">
-      <span class="text-heading" ng-bind="messageHeading"></span>
-    </h2>
-    <div class="as">
-    <div style="padding-top: 22px; padding-bottom: 22px;" class="textgroup-ingress row" ng-bind="messageIngress"></div>
+  <div class="container-fluid--inner">
+    <section class="container-content">
 
-    <div class="row">
-      <pre style="margin-top: 0; margin-bottom: 0; font-size: 13px; line-height: normal; overflow-x: auto;" ng-bind="messageText"></pre>
-    </div>
-    </div>
-    <!-- TODO: note style or something similar here -->
+      <div class="group-instruction">
+
+        <!-- HEADING -->
+        <h2 class="group-heading shrinked row" ng-class="messageHeading.length > 6 && 'long';">
+          <span class="text-heading" ng-bind="messageHeading"></span>
+        </h2>
+
+        <!-- CONTENT -->
+        <div class="textgroup-ingress first last row" ng-bind="messageIngress"></div>
+        <div class="row">
+          <pre class="text-preformatted" ng-bind="messageText"></pre>
+        </div>
+      </div>
+
+    </section>
+
+    <!-- FOOTER -->
+    <footer class="container-content--after group-btn">
+      <button type="submit" ng-disabled="confirmDisabled" class="btn-action" ng-click="confirmAction()">
+        <span class="text-btn" ng-bind="confirmText"></span>
+      </button>
+    </footer>
   </div>
-</section>
-
-<footer class="container-content--after group-btn" style="height: 44px;">
-  <button type="submit" ng-disabled="confirmDisabled" class="btn-action" ng-click="confirmAction()">
-    <span class="text-btn" ng-bind="confirmText"></span>
-  </button>
-</footer>
 </div>
