--- a/frontend/core/src/main/webapp/static/app/user/userHome.html
+++ b/frontend/core/src/main/webapp/static/app/user/userHome.html
@@ -4,23 +4,23 @@
 
     <div class="group-details">
       <div ng-if="getOfflineModifiedCount('item')" class="row">
-        <span class="text-details">modified items: </span>
+        <span class="text-details">unsynced items: </span>
         <span class="text-details" ng-bind="getOfflineModifiedCount('item')"></span>
       </div>
       <div ng-if="getOfflineModifiedCount('task')" class="row">
-        <span class="text-details">modified tasks: </span>
+        <span class="text-details">unsynced tasks: </span>
         <span class="text-details" ng-bind="getOfflineModifiedCount('task')"></span>
       </div>
       <div ng-if="getOfflineModifiedCount('note')" class="row">
-        <span class="text-details">modified notes: </span>
+        <span class="text-details">unsynced notes: </span>
         <span class="text-details" ng-bind="getOfflineModifiedCount('note')"></span>
       </div>
       <div ng-if="getOfflineModifiedCount('list')" class="row">
-        <span class="text-details">modified lists: </span>
+        <span class="text-details">unsynced lists: </span>
         <span class="text-details" ng-bind="getOfflineModifiedCount('list')"></span>
       </div>
       <div ng-if="getOfflineModifiedCount('tag')" class="row">
-        <span class="text-details">modified tags: </span>
+        <span class="text-details">unsynced tags: </span>
         <span class="text-details" ng-bind="getOfflineModifiedCount('tag')"></span>
       </div>
     </div>
