--- a/frontend/core/src/main/webapp/static/app/notes/noteEditor.html
+++ b/frontend/core/src/main/webapp/static/app/notes/noteEditor.html
@@ -3,82 +3,69 @@
     <div class="container-titlebar--inner">
       <div class="group-symmetrical height-large">
         <a href class="group-symmetrical--left link-navigation highlighted active" ng-click="endNoteEdit()" >
-          <span class="text-navigation-back" ng-class="!isFirstSlide() && 'not-swipeable'"
-            ng-bind="isNoteEdited() && !note.deleted ? 'save' : 'back'">
+          <span class="text-navigation-back" ng-class="!isFirstSlide() && 'not-swipeable'" ng-bind="isNoteEdited() && !note.deleted ? 'save' : 'back'">
           </span>
         </a>
-        <div ng-if="mode === 'fullScreen' && !onboardingInProgress"
-          class="group-symmetrical--middle width-large animate-fade-in-out">
-          <a href class="link-navigation downplayed" ng-click="toggleNoteEditMode()">
-            <span class="text-navigation">note settings</span>
+        <div ng-hide="!isNoteTitleHidden() && isFirstSlide()" class="group-symmetrical--middle width-large">
+          <a href class="link" ng-click="openNoteTitleEdit()">
+            <div><span class="text-heading-primary" clamp=2 ng-bind="(note.trans.title ? note.trans.title : 'untitled note')"></span></div>
           </a>
         </div>
-        <a href ng-if="!note.deleted && !onboardingInProgress" class="group-symmetrical--right"
-          ng-click="deleteNoteInEdit()"><span class="icon-trash"></span>
+
+        <a href ng-if="!note.deleted && !onboardingInProgress" class="group-symmetrical--right" ng-click="deleteNoteInEdit()">
+          <span class="icon-trash"></span>
         </a>
-        <a href ng-if="note.deleted && !onboardingInProgress"
-          class="group-symmetrical--right link-navigation highlighted active"
-          ng-click="undeleteNote(note)"><span class="text-navigation">restore</span>
+        <a href ng-if="note.deleted && !onboardingInProgress" class="group-symmetrical--right link-navigation highlighted active" ng-click="undeleteNote(note)">
+          <span class="text-navigation">restore</span>
         </a>
-      </div>
 
-      <!-- NOTE TITLE -->
-      <div ng-hide="hideNoteTitle && !onboardingInProgress" class="row-vertically-centered with-textarea">
-        <textarea ng-hide="isTitleClamped()" class="text-heading-primary" ng-model="note.trans.title"
-          input-model-validator ng-trim="false"
-          ng-keydown="noteTitlebarTextKeyDown($event)" ng-focus="noteTitleFocused()" editable-field
-          editable-field-register-callbacks="registerTitleBarInputCallbacks(focus, blur)" msd-elastic
-          placeholder="enter note title&#8230;" maxlength="128"
-          autocapitalize="none" autocorrect="off">
-        </textarea>
-
-        <div ng-if="isTitleClamped()">
-          <span class="text-heading-primary" ng-class="{'text-downplayed': !note.trans.title}"
-            ng-bind="note.trans.title ? note.trans.title : 'enter note title&#8230;'" clamp=2>
-          </span>
-        </div>
-      </div>
-
-      <div ng-if="onboardingInProgress" class="row">
-        <span ng-show="!noteTitlebarHasText()" class="text-details">
-          e.g. reading suggestions, budget meeting minutes, summer plans
-        </span>
-        <span ng-show="noteTitlebarHasText() && !hideNoteTitle" class="text-details">
-          when done, hit return
-        </span>
       </div>
     </div>
   </header>
 
-   <div class="swiper-container container-fluid--inner" swiper-container="noteEditor" swiper-type="main"
-      expected-slides="2" swiper-container-slide-changed="editorSwiperSlideChanged()">
+  <div class="swiper-container container-fluid--inner" swiper-container="noteEditor" swiper-type="main" expected-slides="2" swiper-container-slide-changed="editorSwiperSlideChanged()">
     <div class="swiper-wrapper" ng-class="onboardingInProgress && 'swiper-no-swiping'">
       <div class="swiper-slide" swiper-slide="noteEditor/basic" slide-index="0">
-        <div ng-style="{'padding-bottom': mode === 'fullScreen' ? 0 : EDITOR_FOOTER_HEIGHT}"
-          class="container-content" drawer-override-aisle="right" swiper-prevent>
+        <div ng-style="{'padding-bottom': mode === 'fullScreen' ? 0 : EDITOR_FOOTER_HEIGHT}" class="container-content" drawer-override-aisle="right" swiper-prevent>
+
+          <!-- NOTE TITLE -->
+          <div ng-hide="isNoteTitleHidden()">
+            <div class="group-mixed with-checkbox">
+              <div class="group-mixed--middle">
+                <textarea class="text-heading-primary" ng-model="note.trans.title" input-model-validator ng-trim="false" ng-keydown="noteTitlebarTextKeyDown($event)" ng-focus="noteTitleFocused()" editable-field editable-field-register-callbacks="registerTitleBarInputCallbacks(focus, blur)" msd-elastic placeholder="enter note title&#8230;" maxlength="128" autocapitalize="none" autocorrect="off">
+                </textarea>
+              </div>
+
+              <div class="group-mixed--right">
+                <a href class="link-navigation" ng-click="clickFavorite()">
+                  <span class="icon-star large" ng-class="!note.trans.favorited && 'inactive'"></span>
+                </a>
+              </div>
+            </div>
+          </div>
+
+          <div ng-if="onboardingInProgress" class="row">
+            <span ng-show="!noteTitlebarHasText()" class="text-details">
+              e.g. reading suggestions, budget meeting minutes, summer plans
+            </span>
+            <span ng-show="noteTitlebarHasText() && !hideNoteTitle" class="text-details">
+              when done, hit return
+            </span>
+          </div>
 
           <!-- LIST PICKER -->
-          <div ng-if="listPickerOpen" class="swiper-no-swiping animate-fade-in"
-            editable-field-container="auto" editable-field-container-scrollable="true"
-            editable-field-container-clicked-elsewhere="closeListPicker()" data-snap-ignore="true">
-            <div list-picker="lists" list-picker-new-item="getNewList()"
-              list-picker-archived-lists="archivedLists"
-              list-picker-save="closeListPickerAndSetListToItem(note, list)"
-              list-picker-clear="closeListPickerAndClearListFromItem(note, list)"
-              list-picker-selected="note.trans.list"></div>
+          <div ng-if="listPickerOpen" class="swiper-no-swiping animate-fade-in" editable-field-container="auto" editable-field-container-scrollable="true" editable-field-container-clicked-elsewhere="closeListPicker()" data-snap-ignore="true">
+            <div list-picker="lists" list-picker-new-item="getNewList()" list-picker-archived-lists="archivedLists" list-picker-save="closeListPickerAndSetListToItem(note, list)" list-picker-clear="closeListPickerAndClearListFromItem(note, list)" list-picker-selected="note.trans.list">
+            </div>
           </div>
 
           <!-- KEYWORDS PICKER -->
-          <div ng-if="keywordsPickerOpen" class="swiper-no-swiping animate-fade-in"
-            editable-field-container="auto" editable-field-container-scrollable="true"
-            editable-field-container-clicked-elsewhere="closeKeywordsPicker()" data-snap-ignore="true">
+          <div ng-if="keywordsPickerOpen" class="swiper-no-swiping animate-fade-in" editable-field-container="auto" editable-field-container-scrollable="true" editable-field-container-clicked-elsewhere="closeKeywordsPicker()" data-snap-ignore="true">
 
-            <form role="form" class="row-form" ng-submit="addNewKeywordToNote(note, newKeyword)"
-              autocapitalize="none" autocorrect="off">
+            <form role="form" class="row-form" ng-submit="addNewKeywordToNote(note, newKeyword)" autocapitalize="none" autocorrect="off">
               <input type="text" ng-model="newKeyword.trans.title" placeholder="add keyword&#8230;" maxlength="128">
             </form>
-            <span class="text-details row" ng-if="newKeyword.trans.title"
-              ng-bind="'hit enter to create #' + newKeyword.trans.title" clamp=2>
+            <span class="text-details row" ng-if="newKeyword.trans.title" ng-bind="'hit enter to create #' + newKeyword.trans.title" clamp=2>
             </span>
 
             <div ng-if="noteHasKeywords(note)" class="keywords-container row">
@@ -90,11 +77,7 @@
             </div>
 
             <div ng-if="keywords" class="keywords-container row">
-              <div class="keyword-wrapper"
-                ng-repeat="keyword in keywords
-                | keywordsFilter:{name:'byOtherThanNoteKeywords', item: note}
-                | filter:newKeyword.trans.title
-                | orderBy:'trans.title'">
+              <div class="keyword-wrapper" ng-repeat="keyword in keywords | keywordsFilter:{name:'byOtherThanNoteKeywords', item: note} | filter:newKeyword.trans.title | orderBy:'trans.title'">
                 <a href class="keyword link" ng-click="addKeywordToNote(note, keyword)">
                   <span class="text-keyword" ng-bind="'#' + keyword.trans.title" clamp=1></span>
                 </a>
@@ -104,13 +87,13 @@
 
           <div ng-if="!listPickerOpen && !keywordsPickerOpen">
 
+            <!-- COLLAPSIBLE -->
             <div ng-if="collapsibleOpen">
 
               <!-- LIST -->
-              <div ng-hide="mode === 'fullScreen'" class="row-vertically-centered">
+              <div class="row-vertically-centered">
                 <a href ng-class="note.trans.list ? 'link' : 'downplayed'" ng-click="openListPicker()">
-                  <span class="text-link"
-                    ng-bind="note.trans.list ? note.trans.list.trans.title : 'select list\u2026'">
+                  <span class="text-link" ng-bind="note.trans.list ? note.trans.list.trans.title : 'select list\u2026'">
                   </span>
                 </a>
               </div>
@@ -125,21 +108,21 @@
                 </div>
               </div>
 
-              <a href class="downplayed" ng-click="openKeywordsPicker()">
+              <a href class="downplayed row" ng-click="openKeywordsPicker()">
                 <span ng-if="!note.trans.keywords" class="text-link">add keywords&#8230;</span>
               </a>
 
             </div>
 
-            <div style="text-align: center;" class="row" ng-click="toggleCollapsible()" ng-bind="collapsibleOpen ? 'less &and;' : 'more &or;'"></div>
+            <div style="text-align: center;" class="row">
+              <a href class="downplayed" ng-click="toggleCollapsible()">
+                <span ng-bind="collapsibleOpen ? 'less &and;' : 'more &or;'"></span>
+              </a>
+            </div>
 
             <!-- CONTENT -->
             <div class="row-vertically-centered with-textarea">
-              <textarea ng-class="onboardingInProgress && !hideNoteTitle && 'input-separate'"
-                ng-model="note.trans.content" input-model-validator ng-focus="noteContentFocused()"
-                msd-elastic editable-field ng-trim="false"
-                editable-field-register-callbacks="registerNoteContentInputCallbacks(focus, blur)"
-                placeholder="enter content&#8230;" autocapitalize="none" autocorrect="off">
+              <textarea ng-class="onboardingInProgress && !hideNoteTitle && 'input-separate'" ng-model="note.trans.content" input-model-validator ng-focus="noteContentFocused()" msd-elastic editable-field ng-trim="false" editable-field-register-callbacks="registerNoteContentInputCallbacks(focus, blur)" placeholder="enter content&#8230;" autocapitalize="none" autocorrect="off">
               </textarea>
             </div>
 
@@ -154,11 +137,7 @@
 
         <footer ng-hide="isNoteFooterHidden()" class="container-content--after editor-footer animate-fade-in-out">
           <nav role="navigation" class="swiper-no-swiping group-symmetrical">
-            <a href ng-hide="onboardingInProgress" ng-click="clickFavorite()" class="group-symmetrical--left">
-              <span class="icon-star" ng-class="!note.trans.favorited && 'inactive'"></span>
-            </a>
-            <a href ng-click="swipeToAdvanced()" ng-hide="isFooterNavigationHidden()"
-              class="group-symmetrical--right link-navigation">
+            <a href ng-click="swipeToAdvanced()" ng-hide="isFooterNavigationHidden()" class="group-symmetrical--right link-navigation">
               <span class="text-navigation-forward">advanced</span>
             </a>
           </nav>
@@ -166,19 +145,16 @@
       </div>
 
       <div class="swiper-slide" swiper-slide="noteEditor/advanced" slide-index="1" ng-init="advancedSlideInfo = {}">
-        <div ng-style="{'padding-bottom': advancedSlideInfo.footerHeight}" class="container-content"
-        swiper-prevent>
+        <div ng-style="{'padding-bottom': advancedSlideInfo.footerHeight}" class="container-content" swiper-prevent>
 
           <!-- URL -->
           <div ng-hide="mode === 'fullScreen'" class="row-vertically-centered with-textarea">
-            <textarea ng-model="note.trans.link" input-model-validator ng-trim="false" msd-elastic
-              maxlength="128" placeholder="enter url&#8230;" autocapitalize="none" autocorrect="off">
+            <textarea ng-model="note.trans.link" input-model-validator ng-trim="false" msd-elastic maxlength="128" placeholder="enter url&#8230;" autocapitalize="none" autocorrect="off">
             </textarea>
           </div>
-
         </div>
-        <footer ng-hide="isNoteFooterHidden()" class="container-content--after editor-footer"
-          editor-footer="advancedSlideInfo">
+
+        <footer ng-hide="isNoteFooterHidden()" class="container-content--after editor-footer" editor-footer="advancedSlideInfo">
 
           <div class="table">
             <div class="table-row">
@@ -192,8 +168,7 @@
           </div>
 
           <nav role="navigation" class="swiper-no-swiping group-symmetrical">
-            <a href ng-click="swipeToBasic()" ng-hide="isFooterNavigationHidden()"
-              class="group-symmetrical--left link-navigation">
+            <a href ng-click="swipeToBasic()" ng-hide="isFooterNavigationHidden()" class="group-symmetrical--left link-navigation">
               <span class="text-navigation-back">basic</span>
             </a>
           </nav>
